# devtools_scicomp_project_2025

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run.py
shell/: submit.sh
src/pyclassify/: __init__.py  classifier.py  utils.py
test/: test_.py
